--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,10 @@
             </p>
             <p>
                 Desvie dos obstáculos do mundo coorporativo, fuja da contratação e colete os itens para garantir
-                bônus! 
+                pontos e avançar de fase! <br> Cada item tem uma propriedade diferente! 📍
             </p>
             <p>Este jogo contém 3 fases, não desista antes do final!</p>
+            <p> Caso note algum bug, atualize a tela F5. </p>
         </div>
     </div>
 
@@ -79,7 +80,8 @@
                 IA Gemini para melhoria e auxílio do código fonte. 
             </p>
             <p>
-                Desenvolvido por Évelyn Muniz, 2025.
+                Desenvolvido por Évelyn Muniz, 2025.  
+                Contato: evymuniz95@ufrrj.br
             </p>
         </div>
     </div>
