--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <button id="instructionsBtn" class="info-button">INSTRUÇÕES:</button>
         <button id="aboutBtn" class="info-button">SOBRE:</button>
     </div>
-    <canvas id="gameCanvas" width="1100" height="700"></canvas>
+    <canvas id="gameCanvas" width="1000" height="700"></canvas>
 
     <div id="touchControls" class="touch-controls-container">
         <div class="touch-left-right-group"> <div id="leftBtn" class="touch-button">ESQ</div>
@@ -81,11 +81,10 @@
             </p>
             <p>
                 Desenvolvido por Évelyn Muniz, 2025.  
-                Contato: evymuniz95@ufrrj.br
+                Contato: evymuniz95@ufrrj
             </p>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
