--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 pontos e avançar de fase! <br> Cada item tem uma propriedade diferente! 📍
             </p>
             <p>Este jogo contém 3 fases, não desista antes do final!</p>
-            <p> Caso note algum bug, atualize a tela F5. </p>
+            <p> Para uma melhor experiência, jogue em um desktop. Caso note algum bug, atualize a tela (F5). </p>
         </div>
     </div>
 
