--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
     </div>
     <canvas id="gameCanvas" width="900" height="600"></canvas>
 
-    <div id="touchControls" class="touch-controls-container">
-        <div class="touch-left-right-group"> <div id="leftBtn" class="touch-button">ESQ</div>
-            <div id="rightBtn" class="touch-button">DIR</div>
-        </div>
-        <div id="jumpBtn" class="touch-button jump-button">PULAR</div>
-    </div>
+<div class="touch-controls-container">
+  <div id="leftBtn" class="touch-button">←</div>
+  <div class="touch-button jump-button">↑</div>
+  <div id="rightBtn" class="touch-button">→</div>
+</div>
+
     <div id="instructionsModal" class="modal-overlay">
         <div class="modal-content">
             <span class="close-button" id="closeInstructions">&times;</span>
