--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
     <canvas id="gameCanvas" width="900" height="600"></canvas>
 
 <div class="touch-controls-container">
-  <div id="leftBtn" class="touch-button">←</div>
-  <div class="touch-button jump-button">↑</div>
-  <div id="rightBtn" class="touch-button">→</div>
+  <div id="leftBtn" class="touch-button">ESQ</div>
+  <div class="touch-button jump-button">PULAR</div>
+  <div id="rightBtn" class="touch-button">DIR</div>
 </div>
 
     <div id="instructionsModal" class="modal-overlay">
