--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
     </div>
     <canvas id="gameCanvas" width="900" height="600"></canvas>
 
-<div class="touch-controls-container">
-  <div id="leftBtn" class="touch-button">ESQ</div>
-  <div class="touch-button jump-button">PULAR</div>
-  <div id="rightBtn" class="touch-button">DIR</div>
-</div>
+     <div id="touchControls" class="touch-controls-container">
+        <div class="touch-left-right-group"> <div id="leftBtn" class="touch-button">ESQ</div>
+        <div id="rightBtn" class="touch-button">DIR</div>
+        <div id="jumpBtn" class="touch-button jump-button">PULAR</div>
+    </div>
 
     <div id="instructionsModal" class="modal-overlay">
         <div class="modal-content">
