--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
         <button id="aboutBtn" class="info-button">SOBRE:</button>
     </div>
     <canvas id="gameCanvas" width="900" height="600"></canvas>
+    <video id="victoryVideo"  autoplay preload="none"></video>
+
 
   <div id="touchControls" class="touch-controls-container">
   <div class="touch-left-right-group">
@@ -21,7 +23,6 @@
   </div>
   <div id="jumpBtn" class="touch-button jump-button">PULAR</div>
 </div>
-
 
     <div id="instructionsModal" class="modal-overlay">
         <div class="modal-content">
